opam-version: "1.2"
name: "decml"
version: "0.1"
maintainer: "Reuben Rowe <reuben.rowe@cantab.net>"
authors: [
  "Reuben Rowe <reuben.rowe@cantab.net>"
  "Victor Darvariu <victor.darvariu@gmail.com>"
]
build: ["jbuilder" "build"]
install: ["jbuilder" "install"]
depends: [
  "jbuilder" {build}
  "ocaml-migrate-parsetree" {build}
  "containers" {build}
  "opam-installer" {install}
]
available: [ ocaml-version >= "4.02" ]