opam-version: "1.2"
name: "decml"
version: "0.1"
maintainer: "Reuben Rowe <reuben.rowe@cantab.net>"
authors: [
  "Reuben Rowe <reuben.rowe@cantab.net>"
  "Victor Darvariu <victor.darvariu@gmail.com>"
]
build: ["dune" "build" "-p" name "-j" jobs]
install: ["dune" "install"]
depends: [
  "dune" {build & >= "1.0"}
  "ocaml-migrate-parsetree" {build}
  "containers" {build & >= "3.0"}
  "csv" {build}
  "opam-installer" {install}
]
available: [ ocaml-version >= "4.02" ]