(executables
 (names linear_regression confidence_interval regression_mixture)
 (libraries decml containers)
 (preprocess
  (pps decml.ppx)))

(alias
 (name linear_regression_demo)
 (deps
  (:< linear_regression.exe))
 (action
  (run %{<} -data-file ../../../examples/data/cats_data.csv)))

(alias
 (name confidence_interval_demo)
 (deps
  (:< confidence_interval.exe))
 (action
  (run %{<} -data-file ../../../examples/data/cats_data.csv)))

(alias
 (name regression_mixture_demo)
 (deps
  (:< regression_mixture.exe))
 (action
  (run %{<} -iterations=500000 -data-file
    ../../../examples/data/cats_data.csv)))
