(executables
 (names
  linear_regression
  confidence_interval
  regression_mixture
  multivariate_regression)
 (libraries decml containers gnuplot)
 (preprocess
  (pps decml.ppx)))

(alias
 (name linear_regression_demo)
 (deps
  (:< linear_regression.exe)
  (:data data/cats_data.csv))
 (action (run %{<} -data-file %{data})))

(alias
 (name confidence_interval_demo)
 (deps
  (:< confidence_interval.exe)
  (:data data/cats_data.csv))
 (action (run %{<} -data-file %{data})))

(alias
 (name regression_mixture_demo)
 (deps
  (:< regression_mixture.exe)
  (:data data/regression_mixture.csv))
 (action (run %{<} -data-file %{data})))

(alias
 (name multivariate_regression_demo)
 (deps
  (:< multivariate_regression.exe)
  (:data data/bh.csv))
 (action (run %{<} -data-file %{data} -learning-rate 0.000003)))
